# bobot

./: .gitignore  Cargo.toml  package.json
.github/workflows/: codeql.yml  cron-codeql-analysis.yml  deploy-bobot-callback.yml  deploy-bobot-compute.yml  deploy-bobot-online.yml  dev-build-bobot-compute.yml  dev-build-bobot-labour.yml  dev-build-bobot-oauth.yml  dev-build-bobot-online.yml  dev-build-bobot-spirit.yml  dev-dependency-audit.yml  dev-laboratory.yml  main-deploy-bobot-compute.yml  main-deploy-bobot-labour.yml  main-deploy-bobot-oauth.yml  main-deploy-bobot-online.yml  main-deploy-bobot-spirit.yml
bobot/callback/: .gitignore  Cargo.toml  wrangler.toml
bobot/compute/: Cargo.toml  wrangler.toml
bobot/compute/src/: lib.rs
bobot/compute/src/primary/: init.rs  job.rs  mod.rs  router.rs  state.rs
bobot/compute/src/routes/: mod.rs  qqbot_callback.rs
bobot/compute/src/routes/oauth/: authorize.rs  callback.rs  mod.rs  token.rs  userinfo.rs
bobot/compute/src/services/: authorize.rs  mod.rs  trace.rs
bobot/core/: Cargo.toml
bobot/labour/: Cargo.toml  wrangler.toml
bobot/labour/src/: lib.rs
bobot/labour/src/job/: cleanup_stale_oauth_redirects.rs  mod.rs
bobot/oauth/: Cargo.toml  build.rs  wrangler.toml
bobot/oauth/src/: lib.rs  router.rs  state.rs  stateful.rs
bobot/oauth/src/handler/: authorize.rs  callback.rs  mod.rs  token.rs  userinfo.rs
bobot/online/: .gitignore  .nuxtignore  nuxt.config.ts  package.json
bobot/online/app/: app.config.ts
bobot/online/app/pages/: index.vue
bobot/online/app/pages/signin/: confirm.vue  index.vue
bobot/spirit/: .gitignore  Cargo.toml  wrangler.toml
bobot/spirit/src/: auth.rs  handler.rs  lib.rs  router.rs  state.rs
bobot/stateful/: 0001_init.sql  0002_redirect_uri_allow_list.sql
bobot/utils/: Cargo.toml
bobot/utils/src/: init.rs  lib.rs  worker.rs
bobot/utils/src/service/: trace.rs
crates/novus/: Cargo.toml
crates/pengu/: Cargo.toml
crates/pengu/src/: error.rs  lib.rs
crates/pengu/src/bot/: access_token.rs  mod.rs  validation.rs
crates/pengu/src/bot/callback_payload/: dispatch.rs  mod.rs  validation.rs
crates/pengu/src/bot/messaging/: direct_message.rs  mod.rs
crates/pengu/src/oauth/: authorize.rs  callback.rs  get_user_info.rs  me.rs  mod.rs  token.rs
scripts/: supabase.sh
supabase/: .gitignore  config.toml
supabase/migrations/: 20260429033606_remote_schema.sql
