[package]
name = "bobot-compute"
edition.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
