[package]
name = "bobot-compute"
edition.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM
web-time = "1"
# HTTP
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json"] }
http = "1"
hyper = "1"
tower = { version = "0.5", default-features = false }
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
# Async
pin-project = "1"
# Tracing
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
time = { version = "0.3", features = ['wasm-bindgen'] }
# Utils
pengu = { workspace = true }
