[package]
name = "bobot-compute"
edition.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
# HTTP
worker = { version = "0.8", features = ['http', 'axum', "d1"] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false, features = [
  "form",
  "macros",
  "json",
  "query",
] }
http = "1"
hyper = "1"
tower = { version = "0.5", default-features = false }
tower-service = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.13", features = ["json"] }
# Async
pin-project = "1"
# Tracing
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
# WASM
time = { version = "0.3", features = ['wasm-bindgen'] }
# Encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# Utils
pengu = { workspace = true }
