[package]
name = "bobot-utils"
version = "0.0.0"
description = "Utilities for developing bobot"
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Worker
worker = { workspace = true }
# HTTP Server
tower = { workspace = true }
http = { workspace = true }
# Async
pin-project = { workspace = true }
# Tracing
tracing = { workspace = true }
tracing-web = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "json", "ansi"] }
# Utilities 
uuid = { workspace = true, features = ["std", "js", "v7"] }
# WASM
time = { workspace = true, features = ["wasm-bindgen"] }
