[package]
name = "pengu"
version = "0.0.0"
description = "A crate for working with QQ Open Platform"
edition.workspace = true
authors.workspace = true

[features]
default = ["bot", "oauth", "error"]
bot = []
oauth = []
error = []

[dependencies]
# Async
tokio = { workspace = true, features = ["sync"] }
# HTTP Client
reqwest = { workspace = true, features = ["json", "query"] }
# Crypto
ed25519-dalek = { workspace = true }
# WASM
time = { workspace = true, features = ["wasm-bindgen"] }
# Rust Pattern
thiserror = { workspace = true }
# Encoding
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
url = { workspace = true }
# Tracing
tracing = { workspace = true }
